assets/scss/03-organisms/_header-alert.scss
.ma__header-alert {
  display: none;
  font-size: 0;
  position: relative;
  z-index:1;

  &__hide {
    @include ma-button-reset;
    font-size: 3rem;
    line-height: .65;
    overflow: hidden;
    position: absolute;
      top: 50%;
      right: 10px;
    transform: translateY(-50%) rotate(45deg);
  }

  &__container {
    @include ma-container;
    padding: 12px 40px;
    text-align: center;
  }

  &__label,
  &__message {
    display: inline-block;
    overflow: hidden;
    max-width: 100%;
    vertical-align: baseline;
  }

  &__label {
    font-size: 1rem;
    letter-spacing: $letter-spacing-large;
    line-height: 1em;
    margin-right: .4em;
    padding-bottom: 6px;
    text-transform: uppercase;
  }

  &__message {
    font-size: 1.5rem;
    line-height: 1.3em;

    a {
      display: inline;
    }
  }
}

//theme
.ma__header-alert {
  background-color: $c-warning;

  &__hide {
    font-weight: 700;
  }

  &__label {
    color: rgba($c-font-base, .7);
    font-weight: 700;
  }

  &__message {

    a {
      color: $c-font-base;

      svg {
        fill: rgba($c-font-base, .5);
      }
    }
  }
}

